homework.yaml
---
 
# deploy homework
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework
  labels:
    app: homework
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homework
  template:
    metadata:
      labels:
        app: homework
    spec:
      containers:
      - name: homework
        image: docker.adm.financial.com/ops/homework
        ports:
        - containerPort: 8080
